--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff twine
+          pip install ruff twine build
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint
